fixed popup background color for highcontrast

--- a/styles/colors-highcontrast.scss
+++ b/styles/colors-highcontrast.scss
@@ -11,7 +11,8 @@
 	// UI Conceptual Colors
 	// ---------------------------------------
 
-	--sand-overlay-bg-color-rgb: rgb(0, 0, 0);
+	--sand-overlay-bg-color-rgb-base: 0, 0, 0;
+	--sand-overlay-bg-color-rgb: rgb(var(--sand-overlay-bg-color-rgb-base));
 	--sand-overlay-outline-color: #7c848b;
 	--sand-overlay-outline-style: solid;
 
